feat: 문자열 구분